--- a/watchlist/templates/course_student.html
+++ b/watchlist/templates/course_student.html
@@ -79,7 +79,7 @@
 				<div id="notice_xxx">
 					<p>选课情况</p>
 					  <p style="font-size:16px; text-align:left;text-indent:2em;font-weight:normal;">
-					  	请注意导入学生列表的文件必须是csv文件，只有一列，并且第一行需为行名（如“学号”等），数据需为真实学号！导入后刷新页面即可看到完整的学生名单~
+					  	请注意导入学生列表的文件必须是【csv】文件，只有【一列】，并且【第一行】必须为【英文】行名（如“StuNum”等），数据需为真实学号！若该学号学生未注册则无法更新数据库会报错！
 					  </p>
 					<div id="notice_xxx_xxx">
 						{% for r in relations %}
