--- a/watchlist/templates/course_xxx_teacher.html
+++ b/watchlist/templates/course_xxx_teacher.html
@@ -141,7 +141,7 @@
 					<!-- 学生名单 -->
 					<div id="course_student_choice">
 						<div class="index_img">
-							<img src="/static/pic/message.png" alt="">
+							<img src="/static/pic/student_big.png" alt="">
 						</div>
 						<span>
 							选课学生
