--- a/watchlist/templates/gpu_xxx_teacher.html
+++ b/watchlist/templates/gpu_xxx_teacher.html
@@ -71,6 +71,9 @@
 				</div>
 			</div>
 			<div id="content">
+				<div style="width:99%;font-size:30px;text-align:center;">
+					<strong>xxxGPU</strong>
+				</div>
 				{% for p in processes %}
 				<div id="program1" class="program">
 					<a href="/process_teacher/{{ p['id'] }}/">
