--- a/watchlist/templates/signup.html
+++ b/watchlist/templates/signup.html
@@ -33,7 +33,7 @@
 
                     <table style="color:black;">
                         <tr>
-                            <th>UserName：</th>
+                            <th style="width:10px;">UserName：</th>
                             <td>
                                 <!-- <input type="text" name="username" required style="line-height:150%;"> -->
                                 <div class="input_block">
@@ -42,7 +42,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th>Password：</th>
+                            <th style="width:10px;">Password：</th>
                             <td>
                                 <!-- <input type="password" id="demo_input" name="password" required style="line-height: 150%;" placeholder="Password"> -->
                                 <!--密码输入框-->
@@ -69,7 +69,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>
+                            <td style="width:10px;">
                                 <a id="login_regit" href="/login/" class="button">已有账号？去登录</a>
                             </td>
                             <td>
