--- a/watchlist/templates/teacher_notice_edit.html
+++ b/watchlist/templates/teacher_notice_edit.html
@@ -76,18 +76,22 @@
 			<div id="content">
 					<div id="notice_xxx">
 						<div id="new_notice_edit">
-							
+							<a href="/my_courses/all_courses/" class="button">
+								返回课程页面
+								<div class="asidepic" style="margin:5px 2px;">
+									<img src="/static/pic/back.png" alt="">
+								</div>
+							</a>
 							<form method="POST" action="/teacher_notice/{{message['id']}}/" ">
 								
-								<span style="margin-left:10%;">
-									<strong>通知标题</strong>
+								<p style="margin-left:20px;margin-top:5px;">
+									<strong style="margin-top:3px;">通知标题</strong>
 									<input type="text" name="title" 
-									required style="height:2em;width:70%;margin:3px;
-									border-radius:5px;padding-left:2px;" value="{{message['title']}}">
-								</span>	
-								<textarea id="edit_text" name="edit" cols="145" rows="18">{{message['info']}}</textarea>
-								<a id="new_notice_submit"  class="button" 
-								style="margin-left:15%;" onclick="$('#submit').trigger('click');">重新发布</a>
+									required style="height:2em;width:55%;margin:0 2px;
+									border-radius:5px;padding-left:2px;background:rgba(255, 255, 255, 0.65);border:1px solid rgba(255, 255, 255, 0.65);" value="{{message['title']}}">
+								</p>	
+								<textarea id="edit_text" name="edit" cols="145" rows="22.5">{{message['info']}}</textarea>
+								<a id="new_notice_submit"  class="button" style="float:right;margin-right:-5px;" onclick="$('#submit').trigger('click');">重新发布</a>
 							
 								<input type="submit" id="submit" style="display: none;">
 							</form>
