--- a/watchlist/templates/login.html
+++ b/watchlist/templates/login.html
@@ -30,7 +30,7 @@
                     </p>
                     <table style="color:black;">
                         <tr>
-                            <th>UserName：</th>
+                            <th style="width:10px;">UserName：</th>
                             <td>
                                 <!-- <input type="text" name="username" required style="line-height:150%;"> -->
                                 <div class="input_block">
@@ -39,7 +39,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th>Password：</th>
+                            <th style="width:10px;">Password：</th>
                             <td>
                                 <!-- <input type="password" id="demo_input" name="password" required style="line-height: 150%;" placeholder="Password"> -->
                                 <!--密码输入框-->
@@ -66,7 +66,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>
+                            <td style="width:10px;">
                                 <a id="login_regit" href="/signup/" class="button">没有账号？去注册</a>
                             </td>
                             <td>
