教师端修改

--- a/watchlist/templates/course_student.html
+++ b/watchlist/templates/course_student.html
@@ -77,7 +77,7 @@
 
 			<div id="content">
 				<div id="notice_xxx">
-					<a href="/my_courses/all_courses/" class="button">
+					<a href="/my_courses_teacher/{{course['id']}}/" class="button">
 						返回课程页面
 						<div class="asidepic" style="margin:5px 2px;">
 							<img src="/static/pic/back.png" alt="">
@@ -85,7 +85,7 @@
 					</a>
 					<p style="text-indent: -156px;">选课情况</p>
 					  <p style="font-size:16px; text-align:center;text-indent: -156px;font-weight:normal;line-height: 150%;">
-					  	请注意导入学生列表的文件必须是【csv】文件
+					  	请注意导入学生列表的文件必须是【csv】文件,完成导入后刷新即可查看~
 					  	<br>只有【一列】，并且【第一行】必须为【英文】行名（如“StuNum”等）
 					  	<br>数据需为真实学号！若该学号学生【未注册】则数据库会报错，无法更新！
 					  </p>
