--- a/watchlist/templates/new_gpus.html
+++ b/watchlist/templates/new_gpus.html
@@ -123,7 +123,7 @@
                                   GPU对应课程(选填)
                                   </th>
                                   <td>
-									<input type="text" name="course_name" placeholder="GPU对应课程(选填）" style="width:199px">
+									<input type="text" name="course_name" placeholder="" style="width:199px">
                                   </td>
                                   
                                 </tr>
