--- a/watchlist/templates/teacher_notice_edit.html
+++ b/watchlist/templates/teacher_notice_edit.html
@@ -76,7 +76,7 @@
 			<div id="content">
 					<div id="notice_xxx">
 						<div id="new_notice_edit">
-							<a href="/my_courses/all_courses/" class="button">
+							<a href="/my_courses_teacher/{{course['id']}}/" class="button">
 								返回课程页面
 								<div class="asidepic" style="margin:5px 2px;">
 									<img src="/static/pic/back.png" alt="">
