--- a/watchlist/templates/teacher_notice_new.html
+++ b/watchlist/templates/teacher_notice_new.html
@@ -78,7 +78,7 @@
 						<!--<p>xxx课程通知</p>
 						<p style="font-weight:normal;font-size:18px;">xxxx年xx月xx日</p>-->
 						<div id="new_notice_edit">
-							<a href="/my_courses/all_courses/" class="button">
+							<a href="/my_courses_teacher/{{course['id']}}/" class="button">
 								返回课程页面
 								<div class="asidepic" style="margin:5px 2px;">
 									<img src="/static/pic/back.png" alt="">
