--- a/watchlist/templates/teacher_notice_xxx.html
+++ b/watchlist/templates/teacher_notice_xxx.html
@@ -75,7 +75,7 @@
 
 			<div id="content">
 					<div id="notice_xxx">
-						<a href="/my_courses/all_courses/" class="button">
+						<a href="/my_courses_teacher/{{course['id']}}/" class="button">
 							返回课程页面
 							<div class="asidepic" style="margin:5px 2px;">
 								<img src="/static/pic/back.png" alt="">
