--- a/watchlist/templates/gpu_xxx_teacher.html
+++ b/watchlist/templates/gpu_xxx_teacher.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>GPU教师端管理系统【GPU信息】</title>
+	<title>GPU教师端管理系统【GPU程序】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
