教师端新增gpu使用量页面 pzq 6.25

--- a/watchlist/templates/gpu_detail.html
+++ b/watchlist/templates/gpu_detail.html
@@ -97,7 +97,7 @@
 				<div id="gpu-user-list">
 				<form action="">
 					<table>
-						<h2 style="text-align:center;">使用用户列表</h2>
+						<h2 style="text-align:center;">使用用户列表（每月）</h2>
 						<tr>
 							<th>课程</th>
 							<th>用户名</th>
